--- a/app/views/datatools/datatool_irr_plan.html
+++ b/app/views/datatools/datatool_irr_plan.html
@@ -110,7 +110,7 @@
                             <th>多经收入占比</th>
                             <td><div class="td-input-wrapper num-input padding-r-15" >
                                 <input type="text" placeholder="/" data-date="" value="3">
-                                <span class="number-format"></span><i class="unit-addon">%</i>
+                                <span class="number-format"><i class="unit-addon">%</i></span>
                             </div></td>
                         </tr>
 
@@ -127,14 +127,14 @@
                             <th>房产税</th>
                             <td><div class="td-input-wrapper num-input padding-r-15" >
                                 <input type="text" placeholder="/" data-date="" value="3">
-                                <span class="number-format"></span><i class="unit-addon">%</i>
+                                <span class="number-format"><i class="unit-addon">%</i></span>
                             </div></td>
                         </tr>
                         <tr class="tr-sub tr-split-bottom">
                             <th>营业税</th>
                             <td><div class="td-input-wrapper num-input padding-r-15" >
                                 <input type="text" placeholder="/" data-date="" value="3">
-                                <span class="number-format"></span><i class="unit-addon">%</i>
+                                <span class="number-format"><i class="unit-addon">%</i></span>
                             </div></td>
                         </tr>
 
@@ -229,7 +229,7 @@
                             </th>
                             <td><div class="td-input-wrapper num-input padding-r-15" >
                                 <input type="text" placeholder="/" data-date="" value="3">
-                                <span class="number-format"></span><i class="unit-addon">%</i>
+                                <span class="number-format"><i class="unit-addon">%</i></span>
                             </div></td>
                         </tr>
                         <tr class="tr-sub">
@@ -286,7 +286,7 @@
                             </th>
                             <td><div class="td-input-wrapper num-input padding-r-15" >
                                 <input type="text" placeholder="/" data-date="" value="3">
-                                <span class="number-format"></span><i class="unit-addon">%</i>
+                                <span class="number-format"><i class="unit-addon">%</i></span>
                             </div></td>
                         </tr>
                         <tr class="tr-sub">
@@ -306,7 +306,7 @@
                             </th>
                             <td><div class="td-input-wrapper num-input padding-r-15" >
                                 <input type="text" placeholder="/" data-date="" value="3">
-                                <span class="number-format"></span><i class="unit-addon">%</i>
+                                <span class="number-format"><i class="unit-addon">%</i></span>
                             </div></td>
                         </tr>
                         <tr class="tr-sub tr-split-bottom">
@@ -359,7 +359,7 @@
                             </th>
                             <td><div class="td-input-wrapper num-input padding-r-15" >
                                 <input type="text" placeholder="/" data-date="" value="3">
-                                <span class="number-format"></span><i class="unit-addon">%</i>
+                                <span class="number-format"><i class="unit-addon">%</i></span>
                             </div></td>
                         </tr>
                         <tr class="tr-sub tr-split-top">
@@ -446,43 +446,43 @@
                                 <tr class="tr-sub">
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="3">
-                                        <span class="number-format"></span><i class="unit-addon">%</i>
+                                        <span class="number-format"><i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="3">
-                                        <span class="number-format"></span><i class="unit-addon">%</i>
+                                        <span class="number-format"><i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="3">
-                                        <span class="number-format"></span><i class="unit-addon">%</i>
+                                        <span class="number-format"><i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="3">
-                                        <span class="number-format"></span><i class="unit-addon">%</i>
+                                        <span class="number-format"><i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="3">
-                                        <span class="number-format"></span><i class="unit-addon">%</i>
+                                        <span class="number-format"><i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="3">
-                                        <span class="number-format"></span><i class="unit-addon">%</i>
+                                        <span class="number-format"><i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="3">
-                                        <span class="number-format"></span><i class="unit-addon">%</i>
+                                        <span class="number-format"><i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="3">
-                                        <span class="number-format"></span><i class="unit-addon">%</i>
+                                        <span class="number-format"><i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="3">
-                                        <span class="number-format"></span><i class="unit-addon">%</i>
+                                        <span class="number-format"><i class="unit-addon">%</i></span>
                                     </div></td>
                                     <td><div class="td-input-wrapper num-input padding-r-15" >
                                         <input type="text" placeholder="/" data-date="" value="3">
-                                        <span class="number-format"></span><i class="unit-addon">%</i>
+                                        <span class="number-format"><i class="unit-addon">%</i></span>
                                     </div></td>
                                 </tr>
                                 <tr class="tr-sub tr-split-bottom">
