--- a/app/views/datatools/datatool_rent_package.html
+++ b/app/views/datatools/datatool_rent_package.html
@@ -3,8 +3,8 @@
     <div class="amp-content-header clearfix">
         <!-- Breadcrumb / Summary info-->
         <ul class="header-nav-sub clearfix">
-            <li><a href="../amp/amp_asset_irr_swiper-finacial.html" id="tri-0-1-0" class="header-subnav-item active" target="#page-frame">铺位信息</a></li>
-            <li><a href="../amp/amp_input_investment.html" id="tri-0-1-1" class="header-subnav-item" target="#page-frame">租金包设定</a></li>
+            <li><a ui-sref="rpgindex" ui-sref-active="active" href="#/rpgindex" id="tri-0-1-0" class="header-subnav-item" >铺位信息</a></li>
+            <li><a ui-sref="rpgset" ui-sref-active="active" href="#/rpgset" id="tri-0-1-1" class="header-subnav-item ">租金包设定</a></li>
         </ul>
     </div><!--amp-content-header-->
     <div class="amp-block-pd">
