--- a/app/views/datatools/rpg_set_swiper_pin.html
+++ b/app/views/datatools/rpg_set_swiper_pin.html
@@ -3,10 +3,10 @@
         <div class="amp-header-breadcrumb">
             <a href="#" class="amp-solo-close"></a>
             <ol class="breadcrumb">
-                <li><a href="#">数据工具</a></li>
-                <li><a href="#">租金包</a></li>
-                <li><a href="#">设定</a></li>
-                <li class="active">推算</li>
+                <li><a ui-sref="rpgindex" href="#/rpgindex"  target="_parent">数据工具</a></li>
+                <li><a ui-sref="rpgindex" href="#/rpgindex"  target="_parent">租金包</a></li>
+                <li><a ui-sref="rpgset" href="#/rpgset"  target="_parent">设定</a></li>
+                <li class="active" >推算</li>
             </ol>
         </div>
         <div class="amp-header-filter clearfix">
