all page update

--- a/app/components/toolbar/filter_base.html
+++ b/app/components/toolbar/filter_base.html
@@ -79,3 +79,4 @@
         <a href="javascript:void(0)" class="btn btn-default amp-btn" id="toolbar-create">录入</a>
     </div><!--div toolbar-item-->
 </div>
+<script src="../components/toolbar/noi_filter.js"></script>
