--- a/app/components/toolbar/noi_filter.html
+++ b/app/components/toolbar/noi_filter.html
@@ -13,7 +13,7 @@
         </div>
     </div>
 </div>
-<script src="noi_filter.js"></script>
+<script src="../components/toolbar/noi_filter.js"></script>
 <script>
     $(document).ready(function(){
         filters.init();
