--- a/app/components/toolbar/rent_package_filter.html
+++ b/app/components/toolbar/rent_package_filter.html
@@ -73,7 +73,7 @@
         <a href="javascript:void(0)" class="btn btn-default amp-btn" id="toolbar-create">录入</a>
     </div><!--div toolbar-item-->
 </div>
-<script src="noi_filter.js"></script>
+<script src="../components/toolbar/noi_filter.js"></script>
 <script>
     $(document).ready(function(){
         filters.init();
