--- a/app/views/datatools/datatool_irr_plan.html
+++ b/app/views/datatools/datatool_irr_plan.html
@@ -1265,5 +1265,12 @@
     </div>
 </div><!-- contentpanel -->
 
-<script src="../../static/js/views/datatools/irr_plan.js"></script>
-<script src="../../static/js/views/datatools/irr_table_input.js"></script>
+<script src="../static/js/views/datatools/irr_plan.js"></script>
+<script src="../static/js/views/datatools/irr_table_input.js"></script>
+<script>
+    jQuery(document).ready(function(){
+        irr_plan.init();
+        table_input.init();
+    });
+</script>
+
