--- a/app/views/datatools/datatool_sim.html
+++ b/app/views/datatools/datatool_sim.html
@@ -321,4 +321,11 @@
         </div>
     </div>
 </div><!-- contentpanel -->
-<script src="../../static/js/views/datatools/datasim.js"></script>
+<script src="../static/js/views/datatools/datasim.js"></script>
+<script>
+    jQuery(document).ready(function(){
+        datasim.init();
+        amp_main.leftPanel_update();
+    });
+</script>
+
