--- a/app/views/datatools/rpg_set_swiper_pin.html
+++ b/app/views/datatools/rpg_set_swiper_pin.html
@@ -1520,3 +1520,9 @@
         </div>
     </div>
 </div><!-- contentpanel -->
+<script src="../static/js/views/datatools/rpg_set.js"></script>
+<script>
+    jQuery(document).ready(function(){
+        swiper_table.init();
+    });
+</script>
