--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -708,7 +708,13 @@
             </div>
         </div>
     </div>
-    <script src="/app/static/js/views/noi_analyse/noi.js"></script>
+
 
 </div><!-- amp-content-panel -->
+<script src="../static/js/views/noi_analyse/noi.js"></script>
+<script>
+    jQuery(document).ready(function(){
+        noi.init();
+    });
 
+</script>
