--- a/app/views/noi_analyse/noi.html
+++ b/app/views/noi_analyse/noi.html
@@ -127,7 +127,7 @@
                             <th>其他收入</th>
                         </tr>
 
-                        <tr class="tr-main">
+                        <tr class="tr-main tr-init-collapse">
                             <th>费用<em class="ys-icon icon-menu-down"></em></th>
                         </tr>
                         <tr class="tr-sub">
