--- a/app/views/datatools/datatool_sim_res.html
+++ b/app/views/datatools/datatool_sim_res.html
@@ -8,14 +8,19 @@
     <div class="ys-block">
         <div class="clearfix">
             <div class="col-xs-6"  id="datatool-sim-floor-table">
-                <div  style="width:100%;">
+                <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
                             <div class="ys-mainpanel-inner">
                                 <!--svg here-->
                                 <svg version="1.1" id="ys-svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="1180px" viewBox="0 0 500 1180" preserveAspectRetio="xMidYMid meet">
 
                                 </svg>
                                 <!--svg here-->
+
                             </div>
+                        </div><!--swiper slide-->
+                    </div><!--swiper wrapper-->
                     <!--  <div class="swiper-scrollbar"></div>-->
                 </div><!--swiper container-->
                 <div class="amp-svg-opt">
@@ -31,8 +36,9 @@
                 </div>
             </div>
             <div class="col-xs-6"  id="datatool-sim-main-table">
-                <div class="" style="width:100%;">
-
+                <div class="swiper-container swiper-container-vertical swiper-container-free-mode" style="width:100%;">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
                             <div class="table-wrapper">
                                 <table class="table table-no-bordered amp-table">
                                     <tbody>
@@ -291,7 +297,7 @@
                                     </tbody>
                                 </table>
                             </div>
-                            <div class="chart-wrapper" id="chart-rpg-wrapper" >
+                            <div class="col-xs-12 chart-wrapper" id="chart-rpg-wrapper">
                                 <!--<em class="chart-axis-info chart-axis-y-info">万元</em>-->
                                 <div id="chart-rpg" style="height:310px;"></div>
                                 <div class="chart-legend">
@@ -300,6 +306,9 @@
                                     <span><em class="color-label" style="background-color:#1abd9d;"></em><i class="name">租金包</i></span>
                                 </div>
                             </div>
+                        </div><!--swiper slide-->
+
+                    </div><!--swiper wrapper-->
                     <!--<div class="swiper-scrollbar"></div>-->
                 </div><!--swiper container-->
             </div>
