--- a/app/static/css/main/main.css
+++ b/app/static/css/main/main.css
@@ -1,6 +1,7 @@
-html,body{padding:0;min-width: 100%;min-height:100%;height:100%;}
 
-.ys-amp{position:relative;min-height: 100vh;padding-bottom: 60px;}
+html,body{padding:0;min-width: 100%;min-height:650px;height:100vh;}
+
+.ys-amp{position:relative;padding-bottom:40px;max-width: inherit;/*height:100%;*/min-height:100vh;height:auto;}
 
 .ys-amp .ys-footer, .ys-amp .footerpanel{position: absolute;bottom:0;width:100%;height:60px;  overflow: hidden;}
 .ys-amp .ys-footer span, .ys-amp .footerpanel span{display: block;text-align: center;line-height: 50px;font-size: 14px;color:#757575;}
@@ -11,7 +12,7 @@ html,body{padding:0;min-width: 100%;min-height:100%;height:100%;}
 #ys-amp-main .ys-content-header{position: relative;height:320px;width:100%;background-image:url(../../images/home_background.jpg);background-position:center top;background-size:cover;background-repeat: no-repeat;}
 #ys-amp-main .ys-content-header em.ys-icon-amp{position: absolute;top:138px;margin-top:0;}
 
-#ys-amp-main .ys-content-panel{position: relative;top:-40px;margin-bottom:60px;padding:0;min-height: 380px;background-color:#fff;border-radius:12px;overflow: hidden;}
+#ys-amp-main .ys-content-panel{position: relative;top:-40px;margin-bottom:60px;padding:0;min-height: 320px;background-color:#fff;border-radius:12px;overflow: hidden;}
 
 #ys-amp-main #amp-projects-table{margin-bottom:0;}
 #amp-projects-table thead{background-color:#f3f4f8; color:#8992a3;}
@@ -24,6 +25,8 @@ html,body{padding:0;min-width: 100%;min-height:100%;height:100%;}
 #amp-projects-table .t-opt>span{display:block;height:20px;line-height:20px;color:#55bbe6;font-size: 12px;margin-left:-5px;}
 #amp-projects-table .t-opt>span>a{display: inline-block;margin-right:5px;margin-left:5px;}
 
+#amp-projects-table .t-opt>span.not-allowed{color:#dfe5e9;}
+#amp-projects-table .t-opt>span.not-allowed>a{display: inline-block;margin-right:5px;margin-left:5px;cursor:not-allowed;color:#dfe5e9;}
 #amp-projects-table tbody span.t-main,#amp-projects-table tbody span.t-sub{display: block; text-align: right;height:20px;line-height: 20px;}
 #amp-projects-table tbody span.t-main{font-size: 13px;color:#333;}
 #amp-projects-table tbody span.t-sub{font-size: 12px;color:#8992a3;}
@@ -34,11 +37,13 @@ html,body{padding:0;min-width: 100%;min-height:100%;height:100%;}
     background-color:#dae1e7;background-size:cover;background-repeat:no-repeat;}
 #amp-projects-table tbody .amp-pm .t-main,#amp-projects-table tbody .amp-pm .t-sub{text-align: left;}
 
-#ys-amp-main .amp-opt-block{height:80px;padding:20px;text-align: center;}
+#ys-amp-main .amp-opt-block{margin-top:50px;height:80px;padding:20px;text-align: center;}
 
 #ys-amp-main .amp-create-project{padding:25px 15px;padding-top:70px;text-align: center;}
 #ys-amp-main .amp-create-project h3{height: 54px;line-height: 54px;font-size: 35px;color:#333;}
 #ys-amp-main .amp-create-project p{margin:0;line-height: 32px;color:#737e8c}
+
+#ys-amp-main .table-hover>tbody>tr:hover { background-color: #f3f4f8; }
 
 /* #ys-amp-create */
 
@@ -88,4 +93,33 @@ html,body{padding:0;min-width: 100%;min-height:100%;height:100%;}
 }
 .icon-arrow-left:before {
     content: "\e091";
+}
+
+
+#ys-amp-create .input-select button.dropdown-toggle {
+    padding-left: 12px;
+    padding-right: 12px;
+    height: 40px;
+    width: 100%;
+    background-color: #3a4153;
+    border: 0;
+    border-radius: 0;
+    font-size: 13px;
+    color: #f3f4f8;
+    text-align: left;
+}
+span.ys-icon-dropdown{display: block;
+    position: absolute;
+    width: 14px;
+    height: 8px;
+    top: 50%;
+    right: 8px;
+    margin-top: -4px;
+    background-position: -170px -261px;}
+#ys-amp-create .input-select .dropdown-menu{width:100%;border-radius:0;background-color: #3a4153;}
+#ys-amp-create .input-select .dropdown-menu>li>a{line-height: 32px;color:#f3f4f8;}
+#ys-amp-create .input-select .dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover {
+    color: #f3f4f8;
+    text-decoration: none;
+    background-color: #4b5368;
 }
