--- a/app/components/toolbar/filter_base.html
+++ b/app/components/toolbar/filter_base.html
@@ -78,5 +78,21 @@
     <div class="toolbar-item item-btn-wrapper" style="padding:0;">
         <a href="javascript:void(0)" class="btn btn-default amp-btn" id="toolbar-create">录入</a>
     </div><!--div toolbar-item-->
+
+    <div class="toolbar-item item-btn-wrapper " style="padding:0;">
+        <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse" id="toolbar-reset">重置</a>
+    </div><!--div toolbar-item-->
+    <div class="toolbar-item item-btn-wrapper toolbar-item-btns" style="padding:0;">
+        <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse" id="toolbar-reset">重置</a>
+        <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse" id="toolbar-search">查询</a>
+    </div><!--div toolbar-item-->
+
+    <div class="toolbar-item item-btn-wrapper " style="padding:0;">
+        <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse" id="toolbar-reset">重置</a>
+    </div><!--div toolbar-item-->
+    <div class="toolbar-item item-btn-wrapper toolbar-item-btns clearfix" style="padding:0;">
+        <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse" id="toolbar-reset">重置</a>
+        <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse" id="toolbar-search">查询</a>
+    </div><!--div toolbar-item-->
 </div>
 <script src="../components/toolbar/noi_filter.js"></script>
