--- a/app/components/toolbar/rent_package_filter.html
+++ b/app/components/toolbar/rent_package_filter.html
@@ -1,4 +1,7 @@
 <div class="toolbar-block">
+    <div class="toolbar-item item-btn-wrapper" style="padding:0;">
+        <a href="javascript:void(0)" class="btn btn-default amp-btn" id="toolbar-create">录入</a>
+    </div><!--div toolbar-item-->
     <div class="toolbar-item item-select-filter">
         <label for="select-id-project">项目</label>
         <input type="text" placeholder="" id="select-id-project" name="select-id-project" hidden value="">
@@ -69,8 +72,9 @@
         </div>
     </div><!--div toolbar-item-->
 
-    <div class="toolbar-item item-btn-wrapper" style="padding:0;">
-        <a href="javascript:void(0)" class="btn btn-default amp-btn" id="toolbar-create">录入</a>
+    <div class="toolbar-item item-btn-wrapper toolbar-item-btns clearfix" style="padding:0;">
+        <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse" id="toolbar-reset">重置</a>
+        <a href="javascript:void(0)" class="btn btn-default amp-btn amp-btn-reverse" id="toolbar-search">查询</a>
     </div><!--div toolbar-item-->
 </div>
 <script src="../components/toolbar/noi_filter.js"></script>
@@ -78,5 +82,10 @@
     $(document).ready(function(){
         filters.init();
         filters.dropdownSelector();
+        $("#toolbar-create").on("click",function(e){
+            e.preventDefault();
+            amp_main.rightPanel_open();
+
+        });
     })
 </script>
