--- a/app/static/css/main/amp_main.css
+++ b/app/static/css/main/amp_main.css
@@ -30,8 +30,8 @@ html,body{/*position:relative;*/width:100%;height:inherit;overflow: auto;min-hei
 .leftpanelinner { padding:0; }
 
 .sidebartitle{margin-top:0;margin-bottom:0;height:44px;position: relative;border-bottom:solid 1px #394152;}
-.sidebartitle>a.menutoggle{display: block;position:absolute;width:32px;height:32px;top:50%;margin-top:-16px;left:10px;}
-.sidebartitle>a.menutoggle:hover>em.ys-icon-togglebar{background-position: -72px -20px;}
+.sidebartitle>.menutoggle{display: block;position:absolute;width:32px;height:32px;top:50%;margin-top:-16px;left:10px;}
+.sidebartitle>.menutoggle:hover>em.ys-icon-togglebar{background-position: -72px -20px;}
 .leftpanel .searchform { display: none; }
 .leftpanel .searchform::after { content: ''; display: block; clear: both; }
 .leftpanel .searchform input { padding: 10px; height: auto; width: 100%; margin: 5px 0 20px 0; -moz-border-radius: 2px; -webkit-border-radius: 2px; border-radius: 2px; }
