--- a/app/views/datatools/datatool_rent_package.html
+++ b/app/views/datatools/datatool_rent_package.html
@@ -12,11 +12,12 @@
             <div class="ys-table-fixed-top" >
                 <table class="table table-no-bordered amp-table table-header-fixed">
                     <colgroup>
-                        <col width="18%">
-                        <col width="18%">
-                        <col width="18%">
-                        <col width="18%">
-                        <col width="18%">
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
                         <col width="10%">
                     </colgroup>
                     <thead>
@@ -24,6 +25,7 @@
                             <th>铺位号</th>
                             <th>楼层</th>
                             <th>建筑面积（m&sup2）</th>
+                            <th>套内面积（m&sup2）</th>
                             <th>业态</th>
                             <th>产权性质</th>
                             <th>租金标准</th>
@@ -34,11 +36,12 @@
             <div class="ys-table-main">
                 <table class="table amp-table table-hover table-header-fixed">
                     <colgroup>
-                        <col width="18%">
-                        <col width="18%">
-                        <col width="18%">
-                        <col width="18%">
-                        <col width="18%">
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
+                        <col width="15%">
                         <col width="10%">
                     </colgroup>
                     <tbody>
@@ -46,6 +49,7 @@
                         <td>1F 102</td>
                         <td>1F</td>
                         <td>200</td>
+                        <td>180</td>
                         <td>餐饮</td>
                         <td>自持</td>
                         <td><i>10</i>元/m&sup2/月</td>
@@ -54,6 +58,7 @@
                         <td>1F 102</td>
                         <td>1F</td>
                         <td>200</td>
+                        <td>180</td>
                         <td>餐饮</td>
                         <td>自持</td>
                         <td><i>10</i>元/m&sup2/月</td>
