--- a/app/components/toolbar/filter.css
+++ b/app/components/toolbar/filter.css
@@ -38,7 +38,11 @@
 .toolbar-item .btn:hover .glyphicon{color:#fff;cursor:pointer;}
 
 .toolbar-item .amp-btn{width: 100%; height: 26px; line-height: 26px; font-size: 13px;  border-radius: 2px;  }
+.toolbar-item .amp-btn.amp-btn-reverse{border:solid 1px #59b46f;background-color:#4b5368;color:#59b46f;}
+.toolbar-item .amp-btn.amp-btn-reverse:hover{background-color:#3a4153;}
 
+.toolbar-item-btns .amp-btn{width:47%;float:left;}
+.toolbar-item-btns .amp-btn:nth-last-child(1){float:right;}
 /*month_selector*/
 .item-month-filter .ys-datepicker input{text-align: center;}
 
