--- a/app/static/css/views/datatools.css
+++ b/app/static/css/views/datatools.css
@@ -5,8 +5,17 @@
 #rent-package .amp-table>tbody>tr:hover{cursor: pointer;}
 
 #rent-package-rpanel .right-content{padding:20px;padding-top:0;padding-right:0;}
-#rent-package-rpanel .table-input-typeA{table-layout: fixed;}
+#rent-package-rpanel .table-input-typeA{table-layout: fixed;margin-bottom:20px;}
+
 #rent-package-rpanel .table-input-typeA>tbody>tr>td{padding:0;padding-top:12px;padding-right:20px;height:78px;overflow: visible;}
+
+#rent-package-rpanel .table-input-typeA.table-input-typeYearly>tbody>tr>th{padding-left:0;text-align: left;}
+#rent-package-rpanel .table-input-typeA.table-input-typeYearly>tbody>tr>td{padding:0;padding-top:0px;padding-right:20px;height:34px;overflow: visible;}
+#rent-package-rpanel .table-input-typeA.table-input-typeYearly thead{background-color:transparent;text-align: left;font-size:14px;color:#8592a3; }
+#rent-package-rpanel .table-input-typeA.table-input-typeYearly>tbody>tr>td input{text-align: right;}
+#rent-package-rpanel .table-input-typeA.table-input-typeYearly thead>tr>th{border-top:0;padding-left:0;text-align: left;}
+#rent-package-rpanel .table-input-typeA.table-input-typeYearly thead>tr>th.table-title{font-size: 16px;}
+#rent-package-rpanel .table-input-type>tbody>tr>td{padding-top:0;padding-bottom:8px;height:34px;}
 .table-input-typeA .input-wrapper label{display: block;margin-bottom:0;height:32px;line-height: 32px;
     color: #8592a3;font-size: 14px;}
 .table-input-typeA .input-wrapper input{width:100%;padding:6px 10px;line-height:20px;height:34px;border:solid 1px #dae1e7;background-color:#f3f4f8;}
@@ -309,3 +318,14 @@ tr>td.change{}
 tr>td.change .td-input-wrapper{ }
 tr>td.change .td-input-wrapper input{background-color:#d8e8db;}
 tr>td.change .td-input-wrapper span{background-color:#d8e8db;color:#3a4153;}
+
+
+/**/
+.rightpanel .amp-table .dropdown-menu{width:100%;border-radius:0;}
+
+.rightpanel .item-select-filter .dropdown-menu>li>a:focus,.rightpanel .dropdown-menu>li>a:hover, .dropdown-menu>li.active>a {
+    color: #373c32;
+    text-decoration: none;
+    background-color: #f3f4f8;
+    outline: none;
+}
