--- a/app/views/datatools/datatool_rent_package_result.html
+++ b/app/views/datatools/datatool_rent_package_result.html
@@ -11,19 +11,13 @@
             </ol>
         </div>
         <div class="amp-header-filter clearfix">
-            <button type="button" class="btn btn-default amp-dropdown-btn amp-btn-disabled pull-left" disabled>
-                项目<span class="glyphicon glyphicon-menu-down"></span>
-            </button>
-            <div class="col-xs-3 amp-date-wrapper">
-                <label>开业时间</label>
-                <div class="amp-date-picker pull-left" data-date="" data-date-format="yyyy-mm-dd" >
-                    <input class="" size="16" type="text" value="2015-10" disabled>
-                </div>
-            </div>
+            <a type="button" class="btn btn-default amp-btn pull-right" ui-sref="rpgpin" href="#/rpgpin">保存</a>
         </div>
     </div><!--amp-content-header-->
     <div class="amp-block-pd">
-
+        <div class="amp-block-title">
+            <h3 class="col-xs-3">租金包预览</h3>
+        </div>
             <div class="amp-table-wrapper-swiper" id="rpg-result-table-wrapper">
                 <div class="ys-table-fixed-top" style="padding-left:100px;">
                     <div class="ys-table-static ys-table-static-left" style="width:100px;">
@@ -48,16 +42,16 @@
                                             <th>业态</th>
                                             <th>产权性质</th>
                                             <th>租金标准</th>
-                                            <th>第一年租金</th>
-                                            <th>第二年租金</th>
-                                            <th>第三年租金</th>
-                                            <th>第四年租金</th>
-                                            <th>第五年租金</th>
-                                            <th>第六年租金</th>
-                                            <th>第七年租金</th>
-                                            <th>第八年租金</th>
-                                            <th>第九年租金</th>
-                                            <th>第十年租金</th>
+                                            <th class="text-right">第一年租金</th>
+                                            <th class="text-right">第二年租金</th>
+                                            <th class="text-right">第三年租金</th>
+                                            <th class="text-right">第四年租金</th>
+                                            <th class="text-right">第五年租金</th>
+                                            <th class="text-right">第六年租金</th>
+                                            <th class="text-right">第七年租金</th>
+                                            <th class="text-right">第八年租金</th>
+                                            <th class="text-right">第九年租金</th>
+                                            <th class="text-right">第十年租金</th>
                                         </tr>
                                     </thead>
                                 </table>
